--- a/article1.html
+++ b/article1.html
@@ -26,6 +26,14 @@
           Le fret maritime est polluant
         </h3>
         <p>
+          <a class="conteneur" href="img/porteConteneur.jpg"
+            ><img
+              src="img/conteneurSmall.jpg"
+              alt="Porte Conteneur"
+              title="Cliquez pour agrandir"
+          /></a>
+        </p>
+        <p>
           Les cargos et porte-conteneurs utilisent l’un des carburants les plus
           sales au monde, un résidu visqueux du pétrole, lourd et difficile à
           brûler. Ce pétrole « bunker » est ce qui reste une fois que les autres
@@ -78,6 +86,9 @@
           la faune.
         </p>
         <h3>Eaux de ballast</h3>
+        <p>
+          <img class="ballast" src="/img/ballast.jpg" alt="Eaux de ballast" />
+        </p>
         <p>
           Les rejets d'eaux de ballast par les navires peuvent avoir un impact
           négatif sur le milieu marin. Les navires de croisière, les grands
@@ -142,6 +153,14 @@
           Marseille, Toulon et Nice.
         </p>
         <p>
+          <a class="cargoSolaire" href="img/cargoTesla.jpg"
+            ><img
+              src="img/cargoTeslaMini.jpg"
+              alt="Cargo du futur"
+              title="Cliquez pour agrandir"
+          /></a>
+        </p>
+        <p>
           La véritable révolution viendra quand nous pourront créer des cargos
           auto-suffisant qui pourront recharger leurs batteries au cours de la
           navigation. Le tout en combinant les énergies solaires et hydraulique
@@ -149,6 +168,7 @@
           fixé d’atteindre dans ces 5 prochaines années. Rendre les routes et la
           mer plus propre et plus habitable pour toutes les espèces.
         </p>
+
         <p class="auteurs">Par Ronald McDonald et Eddy Merx</p>
       </section>
       <aside>
