redo HTML add css

--- a/article2.html
+++ b/article2.html
@@ -14,24 +14,25 @@
         <h1>
           Tesla ne cesse d’innover, cette marque connue pour sa gamme de
           voitures et de batteries électriques innovantes se propulsent dans
-          le futur.
+          le futur. Elon Musk, qui est toujours à la recherche de nouvelle
+          technologique, met un pied sur le marché maritime.
         </h1>
         <p>
-          Elon Musk, qui est toujours à la recherche de nouvelle technologique,
-          met un pied sur le marché maritime.Tesla avait habitué ses fans à des
-          véhicules aux designs ambitieux, une technologie à la pointe du
-          futurisme. Dans un format minimaliste, des couleurs épurées et
-          futuriste. Elon Musk nous emporte cette fois-ci dans une
-          nouvelle-ère. Effectivement, le constructeur est allé bien plus loin
-          dans l'originalité, et brusque les codes éthiques. C’est sur son
-          compte Twitter que le PDG annonce en exclusivité le premier bateau
-          Tesla, Arch-e-mède, grand plein dans la splendeur. Cette révélation
-          fait des heureux, en lançant enfin sa série de bateau électrique, tant
-          attendu des téléspectateurs, fans, consommateurs. Tesla entre dans le
-          marché des bateaux, en se démarquant des autres concurrents,
-          puisqu’elle est électrique.
+          Tesla avait habitué ses fans à des véhicules aux designs ambitieux,
+          une technologie à la pointe du futurisme. Dans un format minimaliste,
+          des couleurs épurées et futuriste. Elon Musk nous emporte cette
+          fois-ci dans une nouvelle-ère. Effectivement, le constructeur est allé
+          bien plus loin dans l'originalité, et brusque les codes
+          éthiques. C’est sur son compte Twitter que le PDG annonce en
+          exclusivité le premier bateau Tesla, Arch-e-mède, grand plein dans la
+          splendeur. Cette révélation fait des heureux, en lançant enfin sa
+          série de bateau électrique, tant attendu des téléspectateurs, fans,
+          consommateurs. Tesla entre dans le marché des bateaux, en se
+          démarquant des autres concurrents, puisqu’elle est électrique.
         </p>
-        <h3>À la pointe du futurisme</h3>
+        <h3>
+          À la pointe du futurisme.
+        </h3>
         <p>
           Elon Musk connus pour un design grandement minimaliste, des couleurs
           épeurés, une touche de modernité. Vous ne serez pas déçu ! Le bateau
@@ -56,7 +57,7 @@
           donnent une perception idéal à l’avenir prometteur du bateau
           électrique.
         </p>
-        <h3>Une importante rentabilisation</h3>
+        <h3>Une importante rentabilisation.</h3>
         <p>
           Le marché du bateau prend un nouveau tournant : l’Arch-e-mède devient
           un produit far des produits Tesla. Effectivement, en activant l’option
@@ -66,25 +67,43 @@
           de mettre en location son bateau, devient de plus en plus
           fleurissante. L’initiative Arch-e-mède ouvre une importante
           rentabilisation, les prix sont élevé, certes, mais le milieu
-          économique et touristique est touché par cette avancée fulgurante.
-        </p>
-        <p>
-          De plus, l’auto-pilotage des bateaux œuvre à des futurs projets, comme
-          le service taxi-boat dans lequel Tesla mène un partenariat pour cette
+          économique et touristique est touché par cette avancée fulgurante. De
+          plus, l’auto-pilotage des bateaux œuvre à des projets futurs, comme le
+          service taxi-boat dans lequel Tesla mène un partenariat pour cette
           idée innovateur. Elon recherche même à perfectionner
           l’Arch-e-mède 2.0. Un service « taxi » prometteur qui permettrait au
           utilisateur de se déplacer par la mer. Il cherche à optimiser la
           puissance du moteur tout en restant dans une batterie électrique voir
-          hydraulique. Selon les spécialistes, le chiffre d’affaire augmenterait
-          de plus de 20 %.
+          hydraulique.
+        </p>
+        <p>
+          Selon les spécialistes, le chiffre d’affaire augmenterait de plus de
+          20 %. Elon Musk annonce que Tesla a reçu près de 200.000 reservations
+          en ligne pour son nouveau modele.
+        </p>
+        <h3>Les Chiffres parlent d'eux meme</h3>
+        <p>
+          17% ont pris la version à $98.990
+        </p>
+        <p>
+          41% ont pris la version à $102.220
+        </p>
+        <p>
+          42% ont pris la version à $299.999
+        </p>
+        <h3>Une nouvelle-ere</h3>
+        <p>
+          La revolution commence au moment ou le service "taxi-boat" est mis en
+          place. Cette innovation chamboulera toute la societe. Nous avançons
+          dans une nouvelle phase dans lequel le bénéfique de cette
+          rentabilisation augmentera.
         </p>
         <p class="auteurs">Par Edith Uber & Max Click</p>
       </section>
       <aside>
-        <a
-          class="twitter-timeline"
-          href="https://twitter.com/chaimisan99/status/1199353414364340226"
-        ></a>
+        <a class="twitter-timeline" href="https://twitter.com/chaimisan99"
+          >Tweets by chaimisan99</a
+        >
         <script
           async
           src="https://platform.twitter.com/widgets.js"
