--- a/index.html
+++ b/index.html
@@ -36,9 +36,31 @@
       </div>
       <img class="logo-arch" alt="logo-arch-e-mede" src="img/logo-arch.jpg" />
     </header>
-    <section class="descritpion-wrapper">
-      <div class="descritpion-image">
-
+    <section class="description">
+      <div class="description-wrapper">
+        <div class="description-image">
+          <img
+            class="description-image-content"
+            alt="arche-e-mede"
+            src="./img/boat_red_logo.png"
+          />
+        </div>
+        <p class="description-text">Design Futuriste</p>
+        <div class="description-image">
+          <img
+            class="description-image-content"
+            alt="arch-e-mede"
+            src="img/boat_black_logo.png"
+          />
+        </div>
+      </div>
+      <hr class="separation" />
+      <div class="description-wrapper">
+        <div class="description-image">
+          <img class="description-image-content" alt="arche-e-mede" src="" />
+        </div>
+        <p class="description-text">Auto-rechargeable</p>
+        <p class="description-text"></p>
       </div>
     </section>
     <hr class="separation" />
