--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/form.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/description-otpions.css" />
+    <link rel="stylesheet" href="css/ficheTech.css"/>
     <title>Tesla arch-E-mede</title>
     <script defer type="text/javascript" src="js/header.js"></script>
   </head>
@@ -38,7 +39,38 @@
     </header>
     <section class="descritpion-wrapper">
       <div class="descritpion-image">
+      </div>
+    </section>
+    <section>
+      <h2>Fiche technique</h2>
+    
+      <div class="ficheTech">
+          <dl>
+          <dt class="horsTout">Longueur hors tout</dt>
+          <dd class="a">6,64m</dd>
+          <dt class="coque">Longueur de coque</dt>
+          <dd class="b">6,23m</dd>
+          <dt class="flotaison">Longueur de flotaison</dt>
+          <dd class="c">6,16m</dd>
+          <dt class="largeurMax">largeur maxi</dt>
+          <dd class="d">2,55</dd>
+          <dt class="tirantEau">Tirant d'eau</dt>
+          <dd class="e">1,60m</dd>
+          <dt class="flotteur">Diamètre maxi des flotteurs</dt>
+          <dd class="f">6,15m</dd>
+          <dt class="puissance">Puissance maxi</dt>
+          <dd class="g">400 Chv</dd>
+          <dt class="puissanceMini">Puissance mini</dt>
+          <dd class="h">200 Chv</dd>
+          <dt class="puissanceInte">Puissance intermediaire</dt>
+          <dd class="i">320 Chv</dd>
+          <dt class="Poids">Poids sans moteur</dt>
+          <dd class="j">644 kg</dd>
+          <dt class="garantie">Garantie</dt>
+          <dd class="k">5 ans</dd>
+          
 
+        </dl>
       </div>
     </section>
     <hr class="separation" />
