--- a/index.html
+++ b/index.html
@@ -181,22 +181,22 @@
           </div>
           <div class="color-choice">
             <h3>Couleurs aux choix</h3>
-            <ul class="colors" name>
+            <ul class="colors">
               <li class="color-li is-selected">
                 <img class="color-sample " src="img/colors/color-black.png" />
-                <p class="color-description">Noir intense</p>
+                <p class="color-description">Noir</p>
               </li>
               <li class="color-li">
                 <img class="color-sample" src="img/colors/color-blue.png" />
-                <p class="color-description">Bleu océan</p>
+                <p class="color-description">Bleu</p>
               </li>
               <li class="color-li">
                 <img class="color-sample" src="img/colors/color-red.png" />
-                <p class="color-description">Rouge profond</p>
+                <p class="color-description">Rouge</p>
               </li>
               <li class="color-li">
                 <img class="color-sample" src="img/colors/color-white.png" />
-                <p class="color-description">Blanc immaculé</p>
+                <p class="color-description">Blanc</p>
               </li>
             </ul>
             <div class="help-text">Veuillez choisir une couleur</div>
