--- a/article2.html
+++ b/article2.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:200i,300i,400,400i,500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/article.css" />
     <title>Article 2</title>
@@ -30,7 +34,14 @@
           consommateurs. Tesla entre dans le marché des bateaux, en se
           démarquant des autres concurrents, puisqu’elle est électrique.
         </p>
-        <img class="article2photo" src="boat3.jpg" alt="" />
+        <p>
+          <a class="conteneur" href="img/boat-3.jpg"
+            ><img
+              src="img/boat-3.jpg"
+              alt="arch-e-mede"
+              title="Cliquez pour agrandir"
+          /></a>
+        </p>
         <h3>
           À la pointe du futurisme.
         </h3>
@@ -59,6 +70,9 @@
           électrique.
         </p>
         <h3>Une importante rentabilisation.</h3>
+        <p>
+          <img class="ballast" src="/img/elon.jpg" alt="Eaux de ballast" />
+        </p>
         <p>
           Le marché du bateau prend un nouveau tournant : l’Arch-e-mède devient
           un produit far des produits Tesla. Effectivement, en activant l’option
@@ -93,6 +107,14 @@
           42% ont pris la version à $299.999
         </p>
         <h3>Une nouvelle-ere</h3>
+        <p>
+          <a class="cargoSolaire" href="img/zboatcrop.jpg"
+            ><img
+              src="img/zboatcrop.jpg"
+              alt="Cargo du futur"
+              title="Cliquez pour agrandir"
+          /></a>
+        </p>
         <p>
           La revolution commence au moment ou le service "taxi-boat" est mis en
           place. Cette innovation chamboulera toute la societe. Nous avançons
