html structure + img + css style for mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="css/form.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/description-otpions.css" />
+    <link rel="stylesheet" href="css/description-options.css" />
     <title>Tesla arch-E-mede</title>
     <script defer type="text/javascript" src="./js/header.js"></script>
   </head>
@@ -50,17 +50,20 @@
           <img
             class="description-image-content"
             alt="arch-e-mede"
-            src="img/boat_black_logo.png"
+            src="img/description-design2.png"
           />
         </div>
       </div>
-      <hr class="separation" />
       <div class="description-wrapper">
+        <p class="description-text">Silencieux</p>
         <div class="description-image">
-          <img class="description-image-content" alt="arche-e-mede" src="" />
+          <img
+            class="description-image-content"
+            alt="arche-e-mede"
+            src="img/description-noise.jpg"
+          />
         </div>
         <p class="description-text">Auto-rechargeable</p>
-        <p class="description-text"></p>
       </div>
     </section>
     <hr class="separation" />
