travaille mobile first article2

--- a/article2.html
+++ b/article2.html
@@ -9,18 +9,29 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/article.css" />
+    <link rel="stylesheet" href="/css/article2.css" />
     <title>Article 2</title>
   </head>
   <body>
     <article>
       <section>
         <h1>
-          Tesla ne cesse d’innover, cette marque connue pour sa gamme de
-          voitures et de batteries électriques innovantes se propulsent dans
-          le futur. Elon Musk, qui est toujours à la recherche de nouvelle
-          technologique, met un pied sur le marché maritime.
+          Tesla ne cesse d’innover
         </h1>
+        <p>
+          La marque connue pour sa gamme de voitures et de batteries électriques
+          innovantes se propulsent dans le futur. Elon Musk, qui est toujours à
+          la recherche de nouvelle technologique, met un pied sur le marché
+          maritime.
+        </p>
+        <p>
+          <a class="archi-crique" href="img/boat-3.jpg"
+            ><img
+              src="img/archi-crique-mini.jpg"
+              alt="L'Arch-e-mede"
+              title="Cliquez pour agrandir"
+          /></a>
+        </p>
         <p>
           Tesla avait habitué ses fans à des véhicules aux designs ambitieux,
           une technologie à la pointe du futurisme. Dans un format minimaliste,
@@ -28,20 +39,13 @@
           fois-ci dans une nouvelle-ère. Effectivement, le constructeur est allé
           bien plus loin dans l'originalité, et brusque les codes
           éthiques. C’est sur son compte Twitter que le PDG annonce en
-          exclusivité le premier bateau Tesla, Arch-e-mède, grand plein dans la
+          exclusivité le premier bateau Tesla, Arch-e-mede, grand plein dans la
           splendeur. Cette révélation fait des heureux, en lançant enfin sa
           série de bateau électrique, tant attendu des téléspectateurs, fans,
           consommateurs. Tesla entre dans le marché des bateaux, en se
           démarquant des autres concurrents, puisqu’elle est électrique.
         </p>
-        <p>
-          <a class="conteneur" href="img/boat-3.jpg"
-            ><img
-              src="img/boat-3.jpg"
-              alt="arch-e-mede"
-              title="Cliquez pour agrandir"
-          /></a>
-        </p>
+
         <h3>
           À la pointe du futurisme.
         </h3>
@@ -70,17 +74,22 @@
           électrique.
         </p>
         <h3>Une importante rentabilisation.</h3>
+        <div class="div-elon">
+          <a class="elon" href="img/elon.jpg"
+            ><img
+              src="img/elon-mini2.jpg"
+              alt="Elon Musk"
+              title="Cliquez pour agrandir"
+          /></a>
+        </div>
         <p>
-          <img class="ballast" src="/img/elon.jpg" alt="Eaux de ballast" />
-        </p>
-        <p>
-          Le marché du bateau prend un nouveau tournant : l’Arch-e-mède devient
+          Le marché du bateau prend un nouveau tournant : l’Arch-e-mede devient
           un produit far des produits Tesla. Effectivement, en activant l’option
           de recharge pratique : le voyage est sans limite. Ce dispositif
           rentabilise considérablement le marché maritime, plus particulièrement
           les entreprises telles que Click & Boat. Cette plateforme, qui permet
           de mettre en location son bateau, devient de plus en plus
-          fleurissante. L’initiative Arch-e-mède ouvre une importante
+          fleurissante. L’initiative Arch-e-mede ouvre une importante
           rentabilisation, les prix sont élevé, certes, mais le milieu
           économique et touristique est touché par cette avancée fulgurante. De
           plus, l’auto-pilotage des bateaux œuvre à des projets futurs, comme le
@@ -96,6 +105,14 @@
           20 %. Elon Musk annonce que Tesla a reçu près de 200.000 reservations
           en ligne pour son nouveau modele.
         </p>
+        <p>
+          <a class="archi" href="img/zboatcrop.jpg"
+            ><img
+              src="img/boat-crop-mini.jpg"
+              alt="Le futur du bateau électrique"
+              title="Cliquez pour agrandir"
+          /></a>
+        </p>
         <h3>Les Chiffres parlent d'eux meme</h3>
         <p>
           17% ont pris la version à $98.990
@@ -107,14 +124,7 @@
           42% ont pris la version à $299.999
         </p>
         <h3>Une nouvelle-ere</h3>
-        <p>
-          <a class="cargoSolaire" href="img/zboatcrop.jpg"
-            ><img
-              src="img/zboatcrop.jpg"
-              alt="Cargo du futur"
-              title="Cliquez pour agrandir"
-          /></a>
-        </p>
+
         <p>
           La revolution commence au moment ou le service "taxi-boat" est mis en
           place. Cette innovation chamboulera toute la societe. Nous avançons
@@ -123,6 +133,8 @@
         </p>
         <p class="auteurs">Par Edith Uber & Max Click</p>
       </section>
+
+      <!--Fil Twitter-->
       <aside>
         <a class="twitter-timeline" href="https://twitter.com/chaimisan99"
           >Tweets by chaimisan99</a
