add new img and responsive flex

--- a/index.html
+++ b/index.html
@@ -47,38 +47,53 @@
     </header>
     <section class="techno">
       <div class="techno-wrapper">
-        <div class="techno-image"> <img class="techno-image-content" src="img/solaire.png" alt=""></div>
-        <p class="techno-text">Malgré son apparence, Arch-e-mede est bien composé de panneau 
-           solaire placé à l’avant du bateau sous une couche de peinture. Ces panneau solaire
-           permettent  la production d’énergie inépuisable et non polluante. L’électricité 
-           produite est en priorité utilisée pour alimenter le moteur et le surplus non 
-           consommé est stocké dans une batterie de stockage.</p>
+        <div class="techno-image">
+          <img class="techno-image-content" src="img/solaire.png" alt="" />
+        </div>
+        <p class="techno-text">
+          Malgré son apparence, Arch-e-mede est bien composé de panneau solaire
+          placé à l’avant du bateau sous une couche de peinture. Ces panneau
+          solaire permettent la production d’énergie inépuisable et non
+          polluante. L’électricité produite est en priorité utilisée pour
+          alimenter le moteur et le surplus non consommé est stocké dans une
+          batterie de stockage.
+        </p>
       </div>
       <div class="techno-wrapper">
-        <div class="techno-image"> <img class="techno-image-content" src="img/boatautopilot.jpg" alt=""></div>
-        <p class="techno-text">Arch-e-mede est doté de la dernière version d’autopilotage.
-          Elle combine plusieurs caméras offrant une vision à 360°, mais aussi un GPS
-          satellite et un sonar, vous offrant ainsi une sécurité optimale que vous rentriez 
-          au port ou que vous naviguiez en haute mer. Le contrôle à distance du Arch-e-mede
-          est disponible par smartphone via l’application Tesla.</p>
+        <div class="techno-image">
+          <img
+            class="techno-image-content"
+            src="img/boatautopilot.jpg"
+            alt=""
+          />
+        </div>
+        <p class="techno-text">
+          Arch-e-mede est doté de la dernière version d’autopilotage. Elle
+          combine plusieurs caméras offrant une vision à 360°, mais aussi un GPS
+          satellite et un sonar, vous offrant ainsi une sécurité optimale que
+          vous rentriez au port ou que vous naviguiez en haute mer. Le contrôle
+          à distance du Arch-e-mede est disponible par smartphone via
+          l’application Tesla.
+        </p>
       </div>
       <div class="techno-wrapper">
-        <div class="techno-image"> <img class="techno-image-content" src="img/turbine.png" alt=""></div>
-        <p class="techno-text">La véritable innovation de ce bateau se cache sous sa coque.
-            Arch-e-mede est doté d’une technologie hydraulique permettant de recharger ses batteries
-            au grès de la navigation et des courants. En effet, le fond de la coque est composé 
-            d’un tunnel permettant de laisser passer l’eau, actionnant ainsi des ailettes dont la 
-            rotation créée de l'énergie. Cette dernière sera ensuite emmagasiné dans les batteries.
-            </p>
+        <div class="techno-image">
+          <img class="techno-image-content" src="img/turbine.png" alt="" />
+        </div>
+        <p class="techno-text">
+          La véritable innovation de ce bateau se cache sous sa coque.
+          Arch-e-mede est doté d’une technologie hydraulique permettant de
+          recharger ses batteries au grès de la navigation et des courants. En
+          effet, le fond de la coque est composé d’un tunnel permettant de
+          laisser passer l’eau, actionnant ainsi des ailettes dont la rotation
+          créée de l'énergie. Cette dernière sera ensuite emmagasiné dans les
+          batteries.
+        </p>
       </div>
-
-
-
-
     </section>
-    <div class="technique-parentflex">
-      <h2 class="technique-title">Fiche technique</h2>
+    <div class="technique">
       <div class="ficheTech">
+        <h2 class="technique-title">Fiche technique</h2>
         <div class="technique-flexbox">
           <div class="technique-title-caract">Longueur hors tout</div>
           <div class="technique-title-number">6,64m</div>
@@ -93,7 +108,7 @@
         </div>
         <div class="technique-flexbox">
           <div class="technique-title-caract">largeur maxi</div>
-          <div class="technique-title-number">2,55</div>
+          <div class="technique-title-number">2,55m</div>
         </div>
         <div class="technique-flexbox">
           <div class="technique-title-caract">Tirant d'eau</div>
@@ -124,8 +139,8 @@
           <div class="technique-title-number">5 ans</div>
         </div>
       </div>
-      <div class="technique-image">
-        <img src="/img/boatguiverti.png" alt="boat_3d" />
+      <div class="technique-flexbox-img">
+        <img class="tech-flex-img" src="./img/3d boat.png" alt="" />
       </div>
     </div>
     <hr class="separation" />
