--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/description-options.css" />
     <link rel="stylesheet" href="css/techno.css" />
     <link rel="stylesheet" href="css/ficheTech.css" />
+    <link rel="stylesheet" href="css/article-link.css" />
     <title>Tesla arch-E-mede</title>
     <script defer type="text/javascript" src="js/header.js"></script>
   </head>
@@ -86,12 +87,10 @@
         </div>
         <p class="techno-text">
           Malgré son apparence, Arch-e-mede est bien composé de panneau solaire
-
           placé à l’avant du bateau sous une couche de pe inture. Ces panneau
           solaire permettent la production d’énergie inépuisable et non
           polluante. L’électricité produite est en priorité utilisée pour
           alimenter le moteur.
-
         </p>
       </div>
       <div class="techno-wrapper">
@@ -105,10 +104,8 @@
         <p class="techno-text">
           Arch-e-mede est doté de la dernière version d’autopilotage. Elle
           combine plusieurs caméras offrant une vision à 360°, mais aussi un GPS
-
           satellite et un sonar, vous offrant ainsi une sécurité optimale. Le
           contrôle à distance du Arch-e-mede est disponible par smartphone via
-
           l’application Tesla.
         </p>
       </div>
@@ -121,7 +118,6 @@
           Arch-e-mede est doté d’une technologie hydraulique permettant de créer
           de l'énergie et par conséquent de recharger ses batteries au grès de
           la navigation et des courants.
-
         </p>
       </div>
     </section>
@@ -290,6 +286,44 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="article-presentation-conteneur">
+        <span class="article-news">NEWS</span>
+        <span class="suiv">suiv ></span>
+        <span class="prec">< Préc</span>
+        <div class="article-here">
+          <div class="article-presentation-content">
+            <img
+              class="article-presentation-image"
+              src="img/porteConteneur.jpg"
+            />
+
+            <span class="article-head">Fret maritime et pollution</span>
+            <span class="article-description"
+              >Le poids du fret maritime est sans cesse croissant sur la
+              pollution mondiale</span
+            >
+            <button class="article-link">
+              <a href="article1.html" target="blank">LIRE</a>
+            </button>
+          </div>
+        </div>
+        <div class="article-here is-hidden">
+          <div class="article-presentation-content">
+            <img class="article-presentation-image" src="img/tesla-boat.jpg" />
+
+            <span class="article-head">Tesla innove en haute mer</span>
+            <span class="article-description"
+              >Les nouvelles mannes de Musk:<br />
+              Click n' Boat & Taxi Boat</span
+            >
+            <button class="article-link">
+              <a href="article2.html" target="blank">LIRE</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <ul class="footerbox">
         <li>
@@ -329,5 +363,6 @@
       </div>
     </footer>
     <script type="text/javascript" src="JS/form.js"></script>
+    <script type="text/javascript" src="JS/article.js"></script>
   </body>
 </html>
