changed link css-sheet

--- a/article1.html
+++ b/article1.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/article.css" />
+    <link rel="stylesheet" href="/css/article1.css" />
 
     <title>Article 1</title>
   </head>
