--- a/article1.html
+++ b/article1.html
@@ -16,15 +16,15 @@
   <body>
     <article>
       <section>
-        <h1>Quel est l’impacts actuel des gros frets sur l’environnement ?</h1>
+        <h1>
+          Quel est l’impact actuel des gros navires de fret sur l’environnement
+          ?
+        </h1>
         <p>
-          De nombreux chiffres circulent sur les émissions générées par le fret
-          maritime par rapport aux voitures. Plusieurs rumeurs circulent sur les
-          émissions générées par le fret maritime en les comparant à celles dues
-          aux voitures. On peut lire sur les réseaux, que quinze - on peut lire
-          aussi vingt, soixante etc.- grands navires pollueraient plus que
-          toutes les voitures de la planète. Qu’en est-il exactement ? De quelle
-          pollution parle-t-on ? Sur quoi a-t-elle un impact ?
+          De nombreux chiffres circulent sur les réseaux. Les vingts plus grands
+          navires pollueraient plus que toutes les voitures de la planète. Qu’en
+          est-il exactement ? De quelle pollution parle-t-on ? Sur quoi a-t-elle
+          un impact ?
         </p>
         <h3>
           Le fret maritime est polluant
@@ -44,31 +44,31 @@
           produits pétroliers – essence, naphta ou encore diesel – plus légers,
           ont été raffinés. Seul l’asphalte utilisé pour les routes est plus
           épais. On y trouve des résidus de métal, de la cendre, et surtout
-          beaucoup de soufre. Le carburant rejettera ainsi beaucoup de NOx et
-          SOx (oxydes d’azote et oxydes de soufre). « Importants polluants de
-          l’air, ils accélèrent la formation de particules fines et
-          ultra-fines », explique l’association écologiste France Nature
-          Environnement. Longtemps utilisé par l’industrie, notamment pour faire
-          tourner des centrales électriques, le pétrole bunker a été
-          progressivement cantonné au transport maritime en raison des pluies
-          acides qu’il provoquait. A ce niveau de 0,1 %, un porte-conteneurs
-          produirait autant d’oxydes de soufre qu’un million de voitures
-          environ. Ces calculs, partagés entre autres par France Nature
-          Environnement, ne sont que des estimations, mais ils donnent un ordre
-          d’idée qui permet d’assurer que, s’il génère une pollution
-          considérable, un cargo de fret ne représente pas l’équivalent de
-          l’intégralité du parc automobile français, ce dernier étant évalué à
-          32 millions de véhicules particuliers. En revanche, la pollution d’un
-          seul cargo équivaut à environ 50 millions de voitures dans les cas où
-          la teneur en soufre est encore de 3,5 %, une pollution tolérée dans
-          des zones de plus en plus limitées et amenées à disparaître d’ici deux
-          ans. En effet, en 2016, l’Organisation maritime internationale (OMI),
-          une entité des Nations unies, a adopté une résolution pour réduire la
+          beaucoup de soufre. Le carburant rejette ainsi beaucoup de NOx et SOx
+          (oxydes d’azote et oxydes de soufre). « Importants polluants de l’air,
+          ils accélèrent la formation de particules fines et ultra-fines »,
+          explique l’association écologiste France Nature Environnement.
+          Longtemps utilisé par l’industrie, notamment pour faire tourner des
+          centrales électriques, le pétrole bunker a été progressivement
+          cantonné au transport maritime en raison des pluies acides qu’il
+          provoquait. A ce niveau de 0,1 %, un porte-conteneurs produirait
+          autant d’oxydes de soufre qu’un million de voitures environ. Ces
+          calculs, partagés entre autres par France Nature Environnement, ne
+          sont que des estimations, mais ils donnent un ordre d’idée qui permet
+          d’assurer que, s’il génère une pollution considérable, un cargo de
+          fret ne représente pas l’équivalent de l’intégralité du parc
+          automobile français, ce dernier étant évalué à 32 millions de
+          véhicules particuliers. En revanche, la pollution d’un seul cargo
+          équivaut à environ 50 millions de voitures dans les cas où la teneur
+          en soufre est encore de 3,5 %, une pollution tolérée dans des zones de
+          plus en plus limitées et amenées à disparaître d’ici deux ans. En
+          effet, en 2016, l’Organisation maritime internationale (OMI), une
+          entité des Nations unies, a adopté une résolution pour réduire la
           teneur maximale en soufre à 0,5 % à partir de 2020 au niveau mondial.
         </p>
         <h3>Mais il émet moins de CO2 que la route.</h3>
         <p>
-          Un transport à la fois écolo et dangereux pour la santé Ces chiffres
+          Un transport à la fois écolo et dangereux pour la santé. Ces chiffres
           contrebalancent un fait acquis : le transport maritime est de loin le
           moins impactant pour la planète. Il utilise moins de 10 grammes de CO2
           pour transporter une tonne de marchandise sur un kilomètre (contre
@@ -85,9 +85,9 @@
         </p>
         <p>
           Par ailleurs, même si la pollution atmosphérique est un point
-          essentiel des enjeux écologiques actuels, il existe d’autres pollution
-          dont on parle moins, mais qui ont des impacts tout aussi important sur
-          la faune.
+          essentiel des enjeux écologiques actuels, il existe d’autres
+          pollutions dont on parle moins, mais qui ont des impacts tout aussi
+          important sur la faune.
         </p>
         <h3>Eaux de ballast</h3>
         <p>
@@ -97,7 +97,7 @@
           Les rejets d'eaux de ballast par les navires peuvent avoir un impact
           négatif sur le milieu marin. Les navires de croisière, les grands
           pétroliers et les vraquiers utilisent une énorme quantité d'eaux de
-          ballast, celles-ci sont souvent captée dans les eaux côtières d'une
+          ballast, celles-ci sont souvent captées dans les eaux côtières d'une
           région après le rejet des eaux usées ou le déchargement de la
           cargaison par les navires. Les eaux de ballast rejetées contiennent
           généralement une variété de matières biologiques, notamment des
@@ -146,7 +146,7 @@
           (presque aucune émission de soufre et de particules fines, et génère
           30% de gaz carbonique (CO2) de moins que le fioul). L’hydrogène a
           également un potentiel important, il est la meilleure solution pour
-          décarboner intégralement, à termes, le transport maritime, mais n’est
+          décarboner intégralement, à terme, le transport maritime, mais n’est
           pas encore mature. Autre solution en cours de déploiement : équiper
           les ports de câbles électriques permettant aux navires, une fois à
           quai, de cesser de brûler du fioul pour produire de l’électricité
@@ -166,8 +166,8 @@
         </p>
         <p class="conclusion">
           La véritable révolution viendra quand nous pourront créer des cargos
-          auto-suffisant qui pourront recharger leurs batteries au cours de la
-          navigation. Le tout en combinant les énergies solaires et hydraulique
+          auto-suffisants qui pourront recharger leurs batteries au cours de la
+          navigation. Le tout en combinant les énergies solaire et hydraulique
           (voir éolienne). Cette révolution, c’est l’objectif que Tesla s’est
           fixé d’atteindre dans ces 5 prochaines années. Rendre les routes et la
           mer plus propre et plus habitable pour toutes les espèces.
